Alterações na página da Comunidade

--- a/Views/Users/Comunity.cshtml
+++ b/Views/Users/Comunity.cshtml
@@ -1,8 +1,7 @@
 @model List<Posts>
 @using Killar.Models;
 @{
-    Layout = "_LayoutBlog";
-    ViewData["Title"] = "Comunidade";
+    ViewData["Title"] = "Bem Vindos à Killar Community";
 
     var post = new Posts();
 }
