--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -112,18 +112,18 @@
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-                                <a class="dropdown-item" asp-controller="Posts" asp-action="RegisterPost"><i
-                                    class="fa-regular fa-comments"></i> Crie um Post</a>
-
-                                    <div class="dropdown-divider"></div>
-
-                                <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
                                         class="fa-solid fa-user-secret"></i> Sobre a Killar</a>
 
                                     <div class="dropdown-divider"></div>
 
                                     <a class="dropdown-item" asp-controller="Users" asp-action="Comunity"><i
                                         class="fa-solid fa-people-group"></i> Comunidade</a>
+
+                                    <div class="dropdown-divider"></div>
+
+                                    <a class="dropdown-item" asp-controller="Users" asp-action="UserProfile"><i
+                                        class="fa-solid fa-user-ninja"></i> Meu Perfil</a>
 
                                 </div>
 
@@ -150,11 +150,6 @@
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-
-                                    <a class="dropdown-item" asp-controller="Posts" asp-action="RegisterPost"><i
-                                    class="fa-regular fa-comments"></i> Crie um Post</a>
-
-                                    <div class="dropdown-divider"></div>
 
                                     <a class="dropdown-item" asp-controller="" asp-action=""><i
                                         class="fa-solid fa-user-secret"></i> Sobre a Killar</a>
