--- a/Views/Users/Comunity.cshtml
+++ b/Views/Users/Comunity.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["Title"] = "Bem Vindos à Killar Community";
 
-    var post = new Posts();
+    Posts post = new Posts();
 }
 
 
-<body class="text-center">
+<body class="text-center comunity-main">
 
     <main role="main">
 
@@ -15,18 +15,19 @@
             <partial name="_RegisterPost" model="@post" />
         </div>
 
-        <div class="container-fluid community col-md-6 offset-md-3">
+        <div class="container-fluid community col-md-10 offset-md-1">
+
             @foreach (Posts item in Model)
             {
-                <div class="col-md-10 comunity-container">
+                <div class="col-md-12 comunity-container">
 
-                    <article id="post-@item.Id" class="article text-justify">
+                    <article id="post-@item.Id" class=" col-md-10 article text-justify">
 
                         <span class="post-author mt-5">@item.Author</span>
 
                         <span class="post-date mt-5">@item.PostDate</span>
 
-                        <hr class="">
+                        <hr>
 
                         <div class="post-content mt-4 mb-4">
 
@@ -36,31 +37,57 @@
 
                     </article>
 
-                    <section id="comments-@item.Id" class="comments">
 
-                            <h4 class="comente">Comente nesta publicação:</h4>
+                    <section class="comment-view col-md-10 mt-4" id="comments-@item.Id">
 
-                            <partial name="_CommentForm" model="@item.Id" />
+                        <h4 class="text-justify mb-2 ml-1">Comente nesta publicação:</h4>
+
+                        <partial name="_CommentForm" model="@item.Id" />
 
                     </section>
 
-                </div>
+                    <!-- Modal -->
 
-                <div class="col-md-10">
+                <div class="modal fade" id="exampleModalCenter-@item.Id" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 
-                    <div class="modal-comment">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
 
-                        <section id="comments-@item.Id" class="comments">
+                            <div class="modal-content">
 
-                            <partial name="_CommentList" model="@item.Comment" />
+                                <div class="modal-header">
 
-                        </section>
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Comentários</h5>
+
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+                                        <span aria-hidden="true">&times;</span>
+
+                                    </button>
+
+                                </div>
+
+                                <div class="modal-body">
+
+                                    <partial name="_CommentList" model="@item.Comment" />
+
+                                </div>
+
+                                <div class="modal-footer">
+
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                                </div>
+
+                            </div>
+
+                        </div>
 
                     </div>
 
                 </div>
 
-                <hr class="">
+                <hr class="mt-5">
             }
 
         </div>
