--- a/Views/Users/_CommentList.cshtml
+++ b/Views/Users/_CommentList.cshtml
@@ -2,12 +2,21 @@
 
 @foreach (Comments c in Model)
 {
-    <div class="mt-3 text-justify comment-list">
 
-        <h5>@c.Author </h5>
-        <span class="post-date">@c.CommentDate.ToString("dd/MM/yy HH:mm")</span>
-        <p>@c.Content</p>
+    <div class="row comment-container">
 
-    </div> 
+        <h5 class="ml-3 mr-3">@c.Author </h5>
+
+        <span class="post-date ml-3 mr-3">@c.CommentDate.ToString("dd/MM/yy HH:mm")</span>
+
+    </div>
+
+    <div class="text-justify  body-comment p-1">
+
+        <p class="ml-3 mr-3">@c.Content</p>
+
+    </div>
+
+    <hr class="mb-4">
 
 }
