--- a/wwwroot/css/styleComunity.css
+++ b/wwwroot/css/styleComunity.css
@@ -1,21 +1,155 @@
+* {
+    font-family: 'fantasy';
+}
+
 .community {
     margin-top: 80px;
 }
 
 .comunity-container {
-    width: 100%;
-    height: 100%;
-    background-color: #007bff;
+    background-color: #007bff88;
+    box-shadow: rgba(255, 255, 255, 0.634) 12px 15px 55px;
+    border-radius: 30px;
     margin-top: 5%;
     padding: 50px;
 }
 
 .article {
     background-color: #fff;
+    border: 10px double #007bff;
+    border-radius: 15px;
+    margin-left: 7%;
     padding: 30px;
 }
 
-.comment-list {
-    background-color: #fff;
+.comment-view {
+    margin-left: 7%;
     padding: 10px;
+}
+
+.btn-cad {
+    box-shadow: #fff -2px 2px 5px;
+    color: #fff;
+    font-weight: bold;
+}
+
+.comment-view h4 {
+    color: #fff;
+    font-size: 16px;
+}
+
+.form-comment {
+    padding: 3px;
+}
+
+.button-comment {
+    display: flex;
+}
+
+.body-comment {
+    background-color: #007bff;
+    border-radius: 50px;
+    box-shadow: #000 -2px 2px 5px;
+}
+
+.body-comment p {
+    color: #fff;
+    margin-top: 15px;
+    font-size: 16px;
+}
+
+.comment-container {
+    padding: 5px;
+}
+
+.comunity-main {
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/background.jpg");
+    background-size: contain;
+    background-repeat: repeat;
+}
+
+.post-author {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.post-date {
+    font-style: italic;
+    margin-left: 10px;
+}
+
+.jumbotron {
+    background-image: url("../images/mario-champ3.jpg");
+    box-shadow: #000 -2px 10px 8px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.post-textarea {
+    background-color: #007bff45;
+    border: 15px double #007bff;
+    border-radius: 15px;
+    box-shadow: rgba(255, 255, 255, 0.493) -5px 5px 5px;
+    padding: 10px;
+    color: #fff;
+    font-size: 18px;
+    letter-spacing: 1px;
+
+}
+
+.post-textarea::placeholder {
+    font-size: 40px;
+    text-align: center;
+    color: #000;
+    padding: 100px;
+    text-shadow: #fff -2px 2px 5px;
+}
+
+.post-textarea:focus {
+    background-color: #007bff45;
+    color: #fff;
+    padding: 10px;
+}
+
+.but-post {
+    width: 35%;
+    font-weight: bold;
+    box-shadow: #000 -2px 10px 8px;
+}
+
+
+
+
+
+
+@media (max-width: 1200px) {}
+
+@media (max-width: 992px) {}
+
+@media (max-width: 990px) {}
+
+@media (max-width: 768px) {
+    .article {
+        margin-left: 0;
+    }
+
+    .comment-view {
+        margin-left: 0;
+    }
+
+    .but-post {
+        width: 40%;
+    }
+}
+
+@media (max-width: 576px) {
+    .article {
+        margin-left: 0;
+    }
+
+    .comment-view {
+        margin-left: 0;
+    }
 }
