--- a/wwwroot/css/styleUserProfile.css
+++ b/wwwroot/css/styleUserProfile.css
@@ -21,11 +21,9 @@
 
 @media (max-width: 1200px) {}
 
-@media (max-width: 992px) {
+@media (max-width: 992px) {}
 
-}
-
-@media (max-width: 768px){
+@media (max-width: 768px) {
     .btn-searchUser {
         margin-top: 10px;
     }
