Alterações na estilização de páginas

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -616,7 +616,7 @@
 
         <div class="">
 
-            <h2 class="featurette-heading mt-5">Um dos maiores lançamento da gigante<span class="h22"> RIOT
+            <h2 class="featurette-heading mt-5">Um dos maiores lançamento da gigante<span class="text-muted"> RIOT
                     GAMES... Vem novidade por ai!</span>
             </h2>
 
