--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -195,9 +195,10 @@
 
         <div class="container-fluid">
 
-            <a href=""><i class="fa-regular fa-calendar-days"></i></a> - @DateTime.Now.ToString("dd/MM/yyyy") - <a
-                href="https://github.com/Gianluca-Vialli"><i class="fa-brands fa-github"></i> Gianluca-Vialli</a> - <a
-                href="https://www.linkedin.com/in/gianluca-vialli-5a2a8a226/"><i class="fa-brands fa-linkedin"></i> My
+            <a href=""><i class="fa-regular fa-calendar-days"></i></a> <a href="">- @DateTime.Now.ToString("dd/MM/yyyy")
+                - </a> <a href="https://github.com/Gianluca-Vialli"><i class="fa-brands fa-github"></i>
+                Gianluca-Vialli</a> - <a href="https://www.linkedin.com/in/gianluca-vialli-5a2a8a226/"><i
+                    class="fa-brands fa-linkedin"></i> My
                 LinkedIn</a>
 
         </div>
