--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,11 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<body class="text-center">
+<body class="text-center body-index">
+    <!-- Start Carousel -->
 
-    <div id="myCarousel" class="container-fluid carousel carousel-container slide mb-5" data-ride="carousel">
+    <div id="myCarousel" class="container carousel carousel-container slide mb-5" data-ride="carousel">
 
-        <ol class="carousel-indicators indicador">
+        <ol class="carousel-indicators indicator">
 
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -14,35 +15,31 @@
 
         </ol>
 
-        <div class="carousel-inner mt-2">
+        <div class="carousel-inner carousel-main">
 
             <div class="carousel-item active custom-carosel">
 
-                <img class="first-slide img-fluid carousel-img w-100" src="../images/carosel-1-.png" alt="Bem vindos a killar wild rift">
+                <img class="first-slide img-fluid carousel-img w-100 h-100" src="../images/carosel-1-.png"
+                    alt="Bem vindos a killar wild rift">
 
-                <div class="container">
+                <div class="carousel-content">
 
-                    <div class="carousel-caption6 mt-3">
+                    <h1>Bem-Vindo a Killar</h1>
 
-                        <h1 class="mt-5">Bem-Vindo a Killar</h1>
+                    <p class="mt-5">Boas-Vindas a Killar Guild. Aproveite e crie seu cadastro para poder
+                        participar do nosso time. Venha participar das Ranked's, PvP's e GvG's em equipe
+                        com vários jogadores empenhados na auto-evolução no Rift. Conheça Pessoas, desenvolva
+                        sua jogabilidade, treine com amigos, suba de elo e muito mais. Não
+                        perca tempo cadastre-se já
+                        e
+                        garanta
+                        uma vaga
+                        com nosso time agora mesmo...
+                    </p>
 
-                        <p class="mt-3">Boas-Vindas a Killar Guild. Aproveite e crie seu cadastro para poder
-                            participar do nosso time. Venha participar das Ranked's, PvP's e GvG's em equipe
-                            com vários jogadores empenhados na auto-evolução no Rift. Conheça Pessoas, desenvolva
-                            sua jogabilidade, treine com amigos, suba de elo e muito mais. Não
-                            perca tempo cadastre-se já
-                            e
-                            garanta
-                            uma vaga
-                            com nosso time agora mesmo...
-                        </p>
+                    <a class="btn btn-block btn-outline-primary mt-5" asp-controller="Users" asp-action="RegisterUser"
+                        role="button">Cadastre-se</a>
 
-                        <p>
-                            <a class="btn btn-block btn-dark mt-5 mb-5" asp-controller="Users" asp-action="RegisterUser"
-                                role="button">Cadastre-se</a>
-                        </p>
-
-                    </div>
 
                 </div>
 
@@ -50,29 +47,24 @@
 
             <div class="carousel-item custom-carosel">
 
-                <img class="second-slide img-fluid carousel-img w-100" src="../images/carosel-2-.png" alt="Patch 3.3 karma astromante">
+                <img class="second-slide img-fluid carousel-img w-100" src="../images/carosel-2-.png"
+                    alt="Patch 3.3 karma astromante">
 
-                <div class="container">
+                <div class="carousel-content">
 
-                    <div class="carousel-caption6 mt-3 ">
+                    <h1>Notas da atualização 3.3 </h1>
 
-                        <h1 class="mt-5">Notas da atualização 3.3 </h1>
+                    <p class="mt-5">É hora de um Brilho Intenso — chegou a Atualização 3.3! Estamos canalizando
+                        os elementos
+                        e as estrelas nessa atualização, pois o Rift Elemental chegou para ficar permanentemente
+                        e as Guardiãs Estelares, novas e antigas, estão aqui para nos proteger das forças do
+                        mal! Também temos a Temporada Ranqueada 6, um novo Passe Wild e muito mais!&copy;"Riot
+                        Games"
+                    </p>
 
-                        <p class="mt-3">É hora de um Brilho Intenso — chegou a Atualização 3.3! Estamos canalizando
-                            os elementos
-                            e as estrelas nessa atualização, pois o Rift Elemental chegou para ficar permanentemente
-                            e as Guardiãs Estelares, novas e antigas, estão aqui para nos proteger das forças do
-                            mal! Também temos a Temporada Ranqueada 6, um novo Passe Wild e muito mais!&copy;"Riot
-                            Games"
-                        </p>
-
-                        <p>
-                            <a class="btn btn-block btn-dark mt-5 mb-5"
-                                href="https://wildrift.leagueoflegends.com/en-us/news/game-updates/wild-rift-patch-notes-3-3/"
-                                role="button">Veja mais</a>
-                        </p>
-
-                    </div>
+                    <a class="btn btn-block btn-outline-primary mt-5"
+                        href="https://wildrift.leagueoflegends.com/en-us/news/game-updates/wild-rift-patch-notes-3-3/"
+                        role="button">Veja mais</a>
 
                 </div>
 
@@ -80,29 +72,24 @@
 
             <div class="carousel-item custom-carosel">
 
-                <img class="third-slide img-fluid carousel-img w-100" src="../images/carosel-3-.png" alt="Imagem wild tour">
+                <img class="third-slide img-fluid carousel-img w-100" src="../images/carosel-3-.png"
+                    alt="Imagem wild tour">
 
-                <div class="container">
+                <div class="carousel-content">
 
-                    <div class="carousel-caption6 mt-3">
+                    <h1>Wild Rift 2022</h1>
 
-                        <h1 class="mt-5">Wild Rift 2022</h1>
+                    <p class="mt-5">"Estamos incrivelmente felizes por poder anunciar que nosso primeiro
+                        Campeonato Mundial
+                        de Wild Rift – Icons acontecerá em Singapura", comenta Leo Faria, Diretor Global de
+                        Esports do Wild Rift. "O Icons promete ser o clímax da temporada de Esports do Wild
+                        Rift, colocando em evidência o que há de melhor nos Esports para dispositivos móveis ao
+                        redor do mundo. &copy;"Riot Games""
+                    </p>
 
-                        <p class="mt-3">"Estamos incrivelmente felizes por poder anunciar que nosso primeiro
-                            Campeonato Mundial
-                            de Wild Rift – Icons acontecerá em Singapura", comenta Leo Faria, Diretor Global de
-                            Esports do Wild Rift. "O Icons promete ser o clímax da temporada de Esports do Wild
-                            Rift, colocando em evidência o que há de melhor nos Esports para dispositivos móveis ao
-                            redor do mundo. &copy;"Riot Games""
-                        </p>
-
-                        <p>
-                            <a class="btn btn-block btn-dark mt-5 mb-5"
-                                href="https://wildrift.leagueoflegends.com/pt-br/news/esports/wild-tour-brasil-2022-grupos-e-agenda-completa/"
-                                role="button">Veja mais</a>
-                        </p>
-
-                    </div>
+                    <a class="btn btn-block btn-outline-primary mt-5"
+                        href="https://wildrift.leagueoflegends.com/pt-br/news/esports/wild-tour-brasil-2022-grupos-e-agenda-completa/"
+                        role="button">Veja mais</a>
 
                 </div>
 
@@ -110,13 +97,13 @@
 
         </div>
 
-        <a class=" carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
 
             <i class=" but-prev button-carosel fa-solid fa-backward" aria-hidden="true"></i>
 
         </a>
 
-        <a class=" carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
 
             <i class=" but-next fa-solid fa-forward" aria-hidden="true"></i>
 
@@ -124,35 +111,37 @@
 
     </div>
 
-    <hr class="mt-5">
+    <!-- Finish Carousel -->
 
-    <div class="container modal-container">
+    <hr class="mt-5 hr-index">
 
-        <!--cards modais-->
+    <!-- Start Cards Modais-->
 
-        <div class="row mt-5">
+    <div class="container-fluid modal-container">
+
+        <div class="row modal-container-row mt-5">
 
             <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-5 modal-card mb-5">
 
-                <h2 class="mb-5 mt-5">PATCH 3.3</h2>
-
                 <img class=" mb-2 mod-img img-fluid" src="../images/card-mod-1-.png" alt="Rift elemental novidades"
-                    width="100%" height="160">
+                width="100%" height="160">
 
-                <hr class="mb-4">
+                <div class="p-3">
 
-                <h3 class="mb-2 modal-title">RIFT ELEMENTAL</h3>
+                    <h3 class="mb-2 modal-title">RIFT ELEMENTAL</h3>
 
-                <p>
-                    Após uma montanha de testes, estamos prontos pra inundar suas partidas ranqueadas. O Rift
-                    Elemental vai trazer grandes mudanças para cada partida que você jogar, literalmente remodelando
-                    o mapa depois da eliminação do primeiro dragão.&copy;"Riot Games"
-                </p>
+                    <p>
+                        Após uma montanha de testes, estamos prontos pra inundar suas partidas ranqueadas. O Rift
+                        Elemental vai trazer grandes mudanças para cada partida que você jogar, literalmente remodelando
+                        o mapa depois da eliminação do primeiro dragão.&copy;"Riot Games"
+                    </p>
 
-                <hr class="mb-4">
+                </div>
 
-                <a type="button" class="btn btn-outline-light mt-4" data-toggle="modal"
-                    data-target="#exampleModalCenter">Leia mais &raquo;</a>
+                <hr class="mb-4 hr-index">
+
+                <a style="color: #fff;" type="button" class="btn btn-outline-primary mb-4"
+                data-toggle="modal" data-target="#exampleModalCenter">Leia mais &raquo;</a>
 
                 <!--Modal-->
 
@@ -211,20 +200,23 @@
 
             <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-5 modal-card mb-5">
 
-                <h2 class="mb-5 mt-5">RANKEDS</h2>
-
                 <img class=" mb-2 mod-img img-fluid" src="../images/card-mod-2-.png" alt="Generic placeholder image"
-                    width="100%" height="160">
-                <hr class="mb-4">
-                <h3 class="mb-2 modal-title">FILA LENDÁRIA</h3>
+                width="100%" height="160">
 
-                <p> E esta atualização trouxe o lançamento das Ranqueadas Lendárias. Essa fila com base
-                    em pontos será apenas solo, disponível para as pessoas que estão no ranque Diamante ou acima.
-                    Juntamente com a novidade.&copy;"Riot Games"</p>
+                <div class="p-3">
 
-                <hr class="mb-4">
+                    <h3 class="mb-2 modal-title">FILA LENDÁRIA</h3>
 
-                <a type="button" class="btn btn-outline-light mt-5" data-toggle="modal"
+                    <p> E esta atualização trouxe o lançamento das Ranqueadas Lendárias. Essa fila com base
+                        em pontos será apenas solo, disponível para as pessoas que estão no ranque Diamante ou acima.
+                        Juntamente com a novidade nos acumulos de pontos para avançar nos elos do Rift.&copy;"Riot Games"
+                    </p>
+
+                </div>
+
+                <hr class="mb-4 hr-index">
+
+                <a style="color: #fff;" type="button" class="btn btn-outline-primary mb-4" data-toggle="modal"
                     data-target="#exampleModalCenter2">Leia mais &raquo;</a>
 
                 <!--Modal-->
@@ -304,28 +296,31 @@
 
         </div>
 
-        <div class="row">
+        <div class="row modal-container-row2 mt-5">
 
             <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-5 modal-card mb-5">
 
-                <h2 class="mb-5 mt-5">EVENTOS</h2>
+                <img class=" mb-2 mod-img img-fluid" src="../images/card-mod-3-.png" alt="Evento patch 3.3 image"
+                width="100%" height="160">
 
-                <img class="mb-2 mod-img img-fluid" src="../images/card-mod-3-.png" alt="Evento patch 3.3 image"
-                    width="100%" height="160">
+                <div class="p-3">
 
-                <hr class="mb-4">
+                    <h3 class="mb-2 modal-title">EVENTOS</h3>
 
-                <h3 class="mb-2 modal-title">SKINS</h3>
+                    <p>
+                        Façam o juramento para a Primeira Estrela e entrem no evento Guardiãs Estelares, repleto de
+                        magia, esperança e amizades que podem salvar a galáxia. Ao jogar partidas, vocês poderão obter
+                        Guloseimas Estelares e recompensas exclusivas... E talvez possam até encontrar algo mais durante
+                        sua jornada.&copy;"Riot Games"
+                    </p>
 
-                <p>Façam o juramento para a Primeira Estrela e entrem no evento Guardiãs Estelares, repleto de
-                    magia, esperança e amizades que podem salvar a galáxia. Ao jogar partidas, vocês poderão obter
-                    Guloseimas Estelares e recompensas exclusivas... E talvez possam até encontrar algo mais durante
-                    sua jornada.&copy;"Riot Games"</p>
+                </div>
 
-                <hr class="mb-4">
+                <hr class="mb-4 hr-index">
 
-                <a type="button" class="btn btn-outline-light mt-4" data-toggle="modal"
-                    data-target="#exampleModalCenter3">Leia mais &raquo;</a>
+                <a style="color: #fff;" type="button" class="btn btn-outline-primary mb-4"
+                data-toggle="modal" data-target="#exampleModalCenter3">Leia mais &raquo;</a>
+
                 <!--Modal-->
 
                 <div class="modal fade" id="exampleModalCenter3" tabindex="-1" role="dialog"
@@ -428,32 +423,30 @@
 
                 </div>
 
-
             </div><!-- /.col-lg-10 -->
-
 
             <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-5 modal-card mb-5">
 
-                <h2 class="mb-5 mt-5">Novos campeões</h2>
+                <img class=" mb-2 mod-img img-fluid" src="../images/card-mod-4-.png" alt="Campeões patch 3.3 image"
+                width="100%" height="160">
 
-                <img class="mb-2 modal-img img-fluid" src="../images/card-mod-4-.png" alt="Campeões patch 3.3 image"
-                    width="100%" height="160">
+                <div class="p-3">
 
-                <hr class="mb-4">
+                    <h3 class="mb-2 modal-title">Novos campeões</h3>
 
-                <h3 class="mb-2 modal-title">Campeões</h3>
+                    <p>
+                        Acabamos de receber um relatório de alguns dos melhores astrônomos e sugerimos ficar de olho nas
+                        estrelas nesta Atualização, já que algo muito brilhante chegará em breve. Mas não são apenas
+                        estrelas brilhantes que esperam por você! Se alguém perdeu a Prévia da Atualização, vamos
+                        recapitular todos os destaques que anunciamos por lá. &copy;"Riot Games"
+                    </p>
 
-                <p>
-                    Acabamos de receber um relatório de alguns dos melhores astrônomos e sugerimos ficar de olho nas
-                    estrelas nesta Atualização, já que algo muito brilhante chegará em breve. Mas não são apenas
-                    estrelas brilhantes que esperam por você! Se alguém perdeu a Prévia da Atualização, vamos
-                    recapitular todos os destaques que anunciamos por lá. &copy;"Riot Games"
-                </p>
+                </div>
 
-                <hr class="mb-4">
+                <hr class="mb-4 hr-index">
 
-                <a type="button" class="btn btn-outline-light mt-4" data-toggle="modal"
-                    data-target="#exampleModalCenter4">Leia mais &raquo;</a>
+                <a style="color: #fff;" type="button" class="btn btn-outline-primary mb-4"
+                data-toggle="modal" data-target="#exampleModalCenter4">Leia mais &raquo;</a>
 
                 <!--Modal-->
 
@@ -478,7 +471,7 @@
 
                             <div class="modal-body">
 
-                                <article>
+                                <article class="ml-3">
 
                                     <h4>KASSADIN, O ANDARILHO DO VAZIO</h4>
 
@@ -528,13 +521,18 @@
             </div><!-- /.col-lg-10 -->
 
         </div><!-- div row-->
+
     </div>
 
-    <hr class="mt-5 mb-5">
+    <!-- End Cards Codais-->
+
+    <hr class="mt-5 mb-5 hr-index">
 
     <div class="container container-mid-page">
 
-        <div class="row featurette">
+        <div class="row featurette ">
+
+            <hr class="mb-4 hr-index">
 
             <div class="col-md-12 col-lg-5 col-xl-5 col-sm-12 mt-3 mb-3 mid-colum">
 
@@ -555,12 +553,10 @@
 
             </div>
 
-            <hr class="mb-4">
-
             <div
-                class="col-md-12 col-lg-6 col-xl-6 col-sm-12 mt-3 mb-3 mid-colum-frame embed-responsive embed-responsive-16by9">
+                class="col-md-9 col-lg-6 col-xl-6 col-sm-9 mt-3 mb-3 mid-colum-frame embed-responsive embed-responsive-16by9 mid-colum-2">
 
-                <iframe class="embed-responsive-ite frame" src="https://www.youtube.com/embed/8O9MQ2fI6Os"
+                <iframe width="800" height="315" src="https://www.youtube.com/embed/RAawVps2-AA"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -569,12 +565,12 @@
 
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="featurette-divider hr-index">
 
         <div class="row featurette ">
 
-
-            <div class="col-md-12 col-lg-6 col-xl-6 col-sm-12 mt-3 mb-3 embed-responsive embed-responsive-16by9">
+            <div
+                class="col-md-12 col-lg-6 col-xl-6 col-sm-12 mt-3 mb-3 mr-5 mid-colum-frame embed-responsive embed-responsive-16by9">
 
                 <iframe class="embed-responsive-ite frame" src="https://www.youtube.com/embed/-idEJO_GK-w"
                     title="YouTube video player" frameborder="0"
@@ -583,9 +579,9 @@
 
             </div>
 
-            <hr class="mb-4">
+            <hr class="mb-4 hr-index">
 
-            <div class="col-md-12 col-lg-5 col-xl-5 col-sm-12 mt-3 mb-3 mid-colum2">
+            <div class="col-md-12 col-lg-5 col-xl-5 col-sm-12 mt-3 mb-3 mid-colum">
 
                 <h2 class="featurette-heading">Ainda não conhece o Wild Rift? <span class="text-muted">Tá esperando
                         o que? Vem com a gente jogar esse game insano!</span>
@@ -605,7 +601,7 @@
 
 
 
-    <hr class="mt-5 mb-5">
+    <hr class="mt-5 mb-5 hr-index">
 
     <div class="container-fluid container-end-page featurette last">
 
