--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -4,7 +4,7 @@
 
 @model Users
 
-<body class="text-center">
+<body style="background-color: black;" class="text-center">
 
     <div class="container">
 
@@ -14,28 +14,28 @@
 
                 <form method="post" asp-action="Login" asp-controller="Home" class="form-signin mt-5">
 
-                    <img class="mb-4 ml-3 mt-5 img-fluid" src="../images/logoPsd.png" alt="Imagem Logo tela de Login"
-                        width="400" height="180">
+                    <img class="img-fluid w-100" src="../images/logoWr.png" alt="Imagem Logo tela de Login"
+                    width="400" height="180">
 
-                    <h1 class="mb-5 font-weight-200">Bem - Vindos a Killar!</h1>
+                    <h1 class="mb-4 mr-3 font-weight-200">Bem - Vindos a Killar!</h1>
 
                     <label asp-for="LoginName" class="sr-only">Nick Name</label>
 
                     <input asp-for="LoginName" name="login" type="text" class="form-control mb-3"
-                        placeholder="Login Name" required autofocus>
+                    placeholder="Login Name" required autofocus>
 
                     <label asp-for="CheckedPassword" class="sr-only">Password</label>
 
                     <input asp-for="CheckedPassword" name="password" type="password" class="form-control mb-3"
-                        placeholder="Password" required>
+                    placeholder="Password" required>
 
-                    <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Log in</button>
+                    <button class="btn btn-lg btn-primary btn-block mt-5" type="submit">Log in</button>
 
                 </form>
 
                 <p class="text-danger mt-3">@ViewData["ErrorLogin"]</p>
 
-                <p>Não tem uma conta? <a asp-controller="Users" asp-action=RegisterUser> Cadastre-se agora mesmo!</a>
+                <p style="color: #fff; font-weight: bold;">Não tem uma conta? <a asp-controller="Users" asp-action=RegisterUser> Cadastre-se agora mesmo!</a>
                 </p>
 
             </div>
