--- a/Views/Users/RegisterUser.cshtml
+++ b/Views/Users/RegisterUser.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Cadastro de Usuário";
 }
 
-<body class="text-center">
+<body style="background-color: black; color: white;" class="text-center">
 
     <div class="container">
 
