--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="~/css/styleUserProfile.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/styleComunity.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/styleRegisterUser.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/styleLogin.css" asp-append-version="true" />
     <link rel="stylesheet" href="/css/FontAwesome/all.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="/css/FontAwesome/fontawesome.min.css" asp-append-version="true" />
 
